test/langtools/tools/javac/valhalla/lworld-values/CheckExtends.out
CheckExtends.java:10:19: compiler.err.inline.type.must.not.implement.identity.object: CheckExtends.NestedValue
1 error
